Fix layout issue on Firefox
not entirely sure what's going on there, but this seems to do the trick

--- a/src/tank/tank.css
+++ b/src/tank/tank.css
@@ -170,6 +170,7 @@ footer a:hover {
 
 .output {
     max-width: 45em;
+    overflow: auto;
 }
 
 
